--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "engines": {
     "node": "^18.x",
-    "npm": "6.gitx"
+    "npm": "6.x"
   },
   "scripts": {
     "build": "nuxt build",
