--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@vue/composition-api": "^1.6.2",
     "@vuelidate/core": "^2.0.0-alpha.41",
     "@vuelidate/validators": "^2.0.0-alpha.29",
+    "chokidar": "^3.5.3",
     "core-js": "^3.19.3",
     "eslint": "^8.4.1",
     "eslint-config-prettier": "^8.3.0",
