--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "engines": {
-    "node": "^18.x",
+    "node": "^16.15.0",
     "npm": "^6.14.17"
   },
   "scripts": {
