--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "private": true,
   "engines": {
-    "node": "^16.15.0",
-    "npm": "^6.14.17"
+    "node": "^17.9.0",
+    "npm": "^8.5.5"
   },
   "scripts": {
     "build": "nuxt build",
@@ -40,6 +40,7 @@
     "pinia": "^2.0.14",
     "prettier": "^2.5.1",
     "push-dir": "^0.4.1",
+    "update-node": "^0.1.0",
     "uuid": "^8.3.2",
     "v-file-upload": "^3.1.7",
     "vue": "^2.6.14",
