--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "private": true,
   "engines": {
-    "node": "^17.9.0",
-    "npm": "^8.5.5"
+    "node": "16.0.0",
+    "npm": "7.10.0"
   },
   "scripts": {
     "build": "nuxt build",
