--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "@nuxtjs/eslint-module": "^3.0.2",
     "@nuxtjs/vuetify": "^1.12.3",
     "@pinia/nuxt": "^0.1.9",
-    "@vue/composition-api": "^1.6.2",
+    "@nuxtjs/composition-api": "^0.32.0",
     "@vuelidate/core": "^2.0.0-alpha.41",
     "@vuelidate/validators": "^2.0.0-alpha.29",
     "core-js": "^3.19.3",
