add gasp + animate index.htlm

--- a/package.json
+++ b/package.json
@@ -22,11 +22,11 @@
   "dependencies": {
     "@babel/eslint-parser": "^7.16.3",
     "@nuxtjs/axios": "^5.13.6",
+    "@nuxtjs/composition-api": "^0.32.0",
     "@nuxtjs/eslint-config": "^8.0.0",
     "@nuxtjs/eslint-module": "^3.0.2",
     "@nuxtjs/vuetify": "^1.12.3",
     "@pinia/nuxt": "^0.1.9",
-    "@nuxtjs/composition-api": "^0.32.0",
     "@vuelidate/core": "^2.0.0-alpha.41",
     "@vuelidate/validators": "^2.0.0-alpha.29",
     "core-js": "^3.19.3",
@@ -34,6 +34,8 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-nuxt": "^3.1.0",
     "eslint-plugin-vue": "^8.2.0",
+    "font-awesome": "^4.7.0",
+    "gsap": "^3.10.4",
     "nuxt": "^2.15.8",
     "nuxt-uid-module": "^0.2.0",
     "nuxt-validate": "^1.0.1",
