--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "vue": "^2.6.14",
     "vue-media-upload": "^1.1.4",
     "vue-server-renderer": "^2.6.14",
+    "vue-tel-input-vuetify": "^1.5.3",
     "vue-template-compiler": "^2.6.14",
     "vuelidate": "^0.7.7",
     "vuetify": "^2.6.1",
