--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@nuxtjs/composition-api": "^0.32.0",
     "@nuxtjs/eslint-config": "^8.0.0",
     "@nuxtjs/eslint-module": "^3.0.2",
+    "@nuxtjs/i18n": "^7.2.2",
     "@nuxtjs/vuetify": "^1.12.3",
     "@pinia/nuxt": "^0.1.9",
     "@vuelidate/core": "^2.0.0-alpha.41",
